--- a/css/master.css
+++ b/css/master.css
@@ -153,7 +153,7 @@ body {
 
 /* Start Landing Section */
 .landing {
-  background-image: url(../images/landing.JPEG);
+  background-image: url(images/landing.JPEG);
   background-size: cover;
   height: calc(100vh - 64px);
   position: relative;
