--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,6 @@
 /* Start Variables */
 :root {
-  --main-color: blue;
+  --main-color: #d1001c;
   --secondary-color: #1a1a1a;
   --golden-color: #c9a33f;
   --section-padding: 60px;
