--- a/css/master.css
+++ b/css/master.css
@@ -76,6 +76,7 @@ body {
 /* Start Header section */
 .header {
   padding: 20px;
+  background: var(--secondary-color);
 }
 .header .container {
   display: flex;
@@ -93,6 +94,7 @@ body {
 }
 .header .links .icon {
   width: 30px;
+  height: 21px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
@@ -116,7 +118,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: var(--secondary-color);
+  background-color: var(--golden-color);
   position: absolute;
   right: 0;
   min-width: 200px;
@@ -128,7 +130,7 @@ body {
   content: "";
   border-width: 10px;
   border-style: solid;
-  border-color: transparent transparent var(--secondary-color) transparent;
+  border-color: transparent transparent var(--golden-color) transparent;
   position: absolute;
   right: 5px;
   top: -20px;
@@ -140,14 +142,14 @@ body {
   display: block;
   padding: 15px;
   text-decoration: none;
-  color: var(--main-color);
+  color: var(--secondary-color);
   transition: var(--main-duration);
 }
 .header .links ul li a:hover {
   padding-left: 25px;
 }
 .header .links ul li:not(:last-child) a {
-  border-bottom: 1px solid var(--golden-color);
+  border-bottom: 1px solid var(--secondary-color);
 }
 /* End Header section */
 
@@ -157,6 +159,16 @@ body {
   background-size: cover;
   height: calc(100vh - 64px);
   position: relative;
+}
+.header::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 130px;
+  width: 100%;
+  height: 19px;
+  background: linear-gradient(to bottom, #d1001c,rgba(0,0,0,0.8), #1a1a1a);
 }
 .landing .intro-text {
   position: absolute;
@@ -478,4 +490,4 @@ td {
   color: var(--main-color);
 }
 /* End Footer section */
-/* chef-belly */
+/* chef-Belly */
